Refactor tests to use getFirst() and getLast() for improved readability